--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <title>Jie Chen</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Inconsolata|Josefin+Sans|Montserrat"
+      rel="stylesheet"
+    />
     <script>
       ;(function () {
         const prefersDark =
@@ -20,7 +24,7 @@
       })()
     </script>
   </head>
-  <body class="font-sans text-gray-700 dark:text-gray-200 relative">
+  <body class="text-gray-700 dark:text-gray-200 relative">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
     <script
